nextcloud-platform/platform/redis/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud-platform
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
      protocol: TCP
    - name: metrics
      port: 9121
      targetPort: metrics
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache
